# EventsDjango

./: README.TXT  README.md  VENV-CONSOLE.bat  pyproject.toml  start_shell.bat  start_site.bat
Scripts/: activate  activate.bat
TestBackend/: db.sqlite3
TestBackend/events/: models.py  serializers.py  urls.py
TestBackend/events/migrations/: 0002_alter_event_id.py
TestBackend/static/scripts/: Base.js
TestBackend/staticfiles/: staticfiles.json
TestBackend/staticfiles/css/: events.7f9c1f21cb10.css  events.bdc36ae6e70e.css  events.d18cd52c9e6d.css  events.dc57cecb713e.css  main.css
TestBackend/staticfiles/scripts/: events.41e8ca5fd2d7.js  events.451b05fecd0e.js  events.453f96046a64.js  events.824a4e4eba1e.js  events.83da4b9b317b.js  events.99ff71ec82d6.js  events.cbacf82a2e13.js  events.cbe5d4d9e5b1.js  events.e5e9863141b5.js
TestBackend/templates/: events.html  user_action.html
TestBackend/users/: tests.py  urls.py  views.py
TestBackend/users/migrations/: 0004_user_is_staff.py
eventsdjango/: db.sqlite3
eventsdjango/TestBackend/: settings.py  urls.py
eventsdjango/events/: views.py
eventsdjango/events/migrations/: 0001_initial.py
eventsdjango/static/css/: main.css
eventsdjango/static/scripts/: Base.js  events.js
eventsdjango/staticfiles/: staticfiles.json
eventsdjango/staticfiles/css/: action.css  events.0c0def646b30.css  events.28e3b064583e.css  events.424d4633d2ec.css  (+3 more)
eventsdjango/templates/: events.html  lower.html  upper.html  user_action.html  user_details.html
eventsdjango/users/: managers.py  models.py  serializers.py
(+7 files in other folders)
